[package]
name = "trusty-embedder"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deprecated shim — re-exports trusty-common::embedder. Use `trusty-common = { features = [\"embedder\"] }` instead."
readme = "README.md"
keywords = ["embeddings", "vector", "fastembed", "mcp", "ml"]
categories = ["science"]
homepage = "https://github.com/bobmatnyc/trusty-tools"
publish = false

[lib]
crate-type = ["rlib"]

# Issue #55: candle Metal validation benchmark. Gated behind the `candle`
# feature so the binary is only built when the candle backend is actually
# compiled in. Run with:
#   cargo run -p trusty-embedder --features candle --bin candle_metal_bench
[[bin]]
name = "candle_metal_bench"
path = "src/bin/candle_metal_bench.rs"
required-features = ["candle"]

[features]
# Mirror the feature surface of the original crate so existing dependants
# (trusty-search, trusty-memory-core) keep compiling unchanged. Each
# feature forwards to the equivalent `embedder-*` sub-feature on
# `trusty-common`.
default = ["bundled-ort"]
bundled-ort = ["trusty-common/embedder-bundled-ort"]
cuda = ["trusty-common/embedder-cuda"]
load-dynamic = ["trusty-common/embedder-load-dynamic"]
coreml = ["trusty-common/embedder-coreml"]
test-support = ["trusty-common/embedder-test-support"]
# Issue #54: opt-in Candle BERT backend (all-MiniLM-L6-v2) on Metal/CPU.
# Forwards to `trusty-common/embedder-candle`. Not default — operators must
# enable it explicitly with `--features candle`.
candle = ["trusty-common/embedder-candle"]

[dependencies]
trusty-common = { workspace = true, features = ["embedder"] }
# Issue #55: portable RSS measurement for the candle Metal validation
# harness. `sysinfo` is already a workspace dep and works cross-platform
# (macOS task_info / Linux /proc / Windows API) without per-OS glue.
sysinfo = { workspace = true }
# Issue #55: used by the candle_metal_bench binary. tokio drives async
# FastEmbedder init; anyhow gives the bin ergonomic startup-error
# handling. Both are already workspace deps so this adds no new external
# version constraints.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
