[package]
name = "trusty-embedderd"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/bobmatnyc/trusty-tools"
description = "Standalone ONNX embedding daemon for trusty-tools (issue #110 Phase 1)."
readme = "README.md"
homepage = "https://github.com/bobmatnyc/trusty-tools"

[[bin]]
name = "trusty-embedderd"
path = "src/main.rs"

[dependencies]
# Shared client / wire types — now provided by trusty-common's `embedder-client` feature.
# (Formerly `trusty-embedder-client` crate; removed in v0.2.0.)
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort", "embedder-client"] }

# CLI argument parsing.
clap = { workspace = true }

# HTTP server.
axum = { workspace = true }
tower-http = { workspace = true }

# Async runtime.
tokio = { workspace = true }

# Serde for JSON handlers.
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (binary: anyhow).
anyhow = { workspace = true }

# Logging.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Used in the bit_identical integration test.
tokio = { workspace = true }
anyhow = { workspace = true }
# Wire types for the integration test (now in trusty-common::embedder_client).
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort", "embedder-client"] }

[features]
# Forward ORT feature flags so the binary can be compiled with cuda/coreml.
default = []
bundled-ort = ["trusty-common/embedder-bundled-ort"]
cuda = ["trusty-common/embedder-cuda"]
load-dynamic = ["trusty-common/embedder-load-dynamic"]
coreml = ["trusty-common/embedder-coreml"]
