[package]
name = "trusty-embedderd"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/bobmatnyc/trusty-tools"
description = "Unified ONNX embedding daemon with HTTP + UDS transports and BatchQueue (issue #164)."
readme = "README.md"
homepage = "https://github.com/bobmatnyc/trusty-tools"

[lib]
name = "trusty_embedderd"
path = "src/lib.rs"
# Why: expose the daemon's startup sequence as a library so the bundled shim
# binary inside `trusty-search` can call `trusty_embedderd::run()` without
# duplicating any logic. The standalone `trusty-embedderd` binary delegates
# to the same function. crate-type rlib keeps link semantics clean.
crate-type = ["rlib"]

[[bin]]
name = "trusty-embedderd"
path = "src/main.rs"

[dependencies]
# Shared client / wire types — now provided by trusty-common's `embedder-client` feature.
# (Formerly `trusty-embedder-client` crate; removed in v0.2.0.)
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort", "embedder-client"] }

# CLI argument parsing.
clap = { workspace = true }

# HTTP server.
axum = { workspace = true }
tower-http = { workspace = true }

# Async runtime.
tokio = { workspace = true }

# Serde for JSON handlers.
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (binary: anyhow).
anyhow = { workspace = true }

# Logging.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Used in the bit_identical and concurrent_embed integration tests.
tokio = { workspace = true }
anyhow = { workspace = true }
# Tempfile for ephemeral UDS socket paths in integration tests.
tempfile = { workspace = true }
# HTTP client for the concurrent HTTP integration tests.
reqwest = { workspace = true }
# Wire types + MockEmbedder for integration tests.
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort", "embedder-client", "embedder-test-support"] }

[features]
# Forward ORT feature flags so the binary can be compiled with cuda/coreml.
default = []
bundled-ort = ["trusty-common/embedder-bundled-ort"]
cuda = ["trusty-common/embedder-cuda"]
load-dynamic = ["trusty-common/embedder-load-dynamic"]
coreml = ["trusty-common/embedder-coreml"]
