[package]
name = "tga"
version = "1.0.17"
publish = true
edition = "2021"
# Aligned with the workspace MSRV (1.88) per #254. Required for
# `std::sync::LazyLock` (CLI help wiring, issue #216). tga does not use
# let-chains, but aligning with the workspace pin prevents MSRV drift.
rust-version = "1.88"
authors = ["Bob Matsuoka <bob@matsuoka.com>"]
license = "Elastic-2.0"
repository = "https://github.com/bobmatnyc/trusty-tools"
description = "Developer productivity analytics — git commit collection, classification, and reporting"
keywords = ["git", "analytics", "productivity", "developer-metrics"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".claude/*",
    ".claude-mpm/*",
    ".fastembed_cache/*",
    ".github/*",
    "docs/*",
    "configs/*",
]

[[bin]]
name = "tga"
path = "src/main.rs"

[dependencies]
# Shared CLI help system (issue #216): declarative `help.yaml` loader +
# Jaro-Winkler "did you mean?" suggester. Only the `cli-help` feature is
# enabled; tga is otherwise independent of trusty-common.
trusty-common = { workspace = true, features = ["cli-help"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# CLI
clap = { version = "4", features = ["derive", "env"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Database
# Bumped from 0.31 to align with trusty-memory-core / trusty-cto-db
# (rusqlite 0.39, libsqlite3-sys 0.37). Cargo's `links = "sqlite3"`
# uniqueness rule forbids two copies of libsqlite3-sys in one build graph,
# so every crate using rusqlite in this workspace must agree on a single
# major version.
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
# Git
# Disable default ssh+https features to drop the system OpenSSL/libssh2
# system dependency; vendor libgit2 itself so cross-compiled musl builds
# don't require libgit2 on the host runner.
# Bumped from 0.19 to 0.20 to align with trusty-memory-core / open-mpm.
# Cargo's `links = "git2"` uniqueness rule forbids two copies of libgit2-sys.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
# HTTP client — use rustls and disable default features (which include
# native-tls/hyper-tls and would re-introduce the OpenSSL system dep).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Parallelism
rayon = "1"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
thiserror = "1"
# Regex / pattern matching
regex = "1"
aho-corasick = "1"
# String similarity (identity fuzzy matching)
strsim = "0.11"
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Progress bars
indicatif = "0.17"
# UUID
uuid = { version = "1", features = ["v4", "serde"] }
# Hashing (config hash)
blake3 = "1"
# CSV generation
csv = "1"
# Template engine (for markdown reports)
tera = "1"
# Async trait
async-trait = "0.1"
# Async stream combinators (for bounded-concurrency LLM fallback)
futures = "0.3"

# Optional: AWS Bedrock runtime client for the Bedrock LLM provider.
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }

[features]
default = []
# Enable the AWS Bedrock LLM classifier provider. Without this feature,
# `--provider bedrock` returns a configuration error explaining the build.
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime"]

[dev-dependencies]
# HTTP mocking for async reqwest tests
wiremock = "0.6"
# Statistical benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Capture tracing events in tests (used by ticket_regex warn-log assertions)
tracing-test = "0.2"

[[bench]]
name = "tga_bench"
harness = false
