[package]
name = "tga"
version = "2.5.0"
publish = true
edition = "2021"
# Aligned with the workspace MSRV (1.91) per #254. Required for
# `std::sync::LazyLock` (CLI help wiring, issue #216). The effective workspace
# floor is now 1.91 (aws-smithy-* indirect deps); aligning prevents MSRV drift.
rust-version = "1.91"
authors = ["Bob Matsuoka <bob@matsuoka.com>"]
license = "Elastic-2.0"
repository = "https://github.com/bobmatnyc/trusty-tools"
description = "Developer productivity analytics — git commit collection, classification, and reporting"
keywords = ["git", "analytics", "productivity", "developer-metrics"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".claude/*",
    ".claude-mpm/*",
    ".fastembed_cache/*",
    ".github/*",
    "configs/*",
]

[[bin]]
name = "tga"
path = "src/main.rs"

[dependencies]
# Shared CLI help system (issue #216): declarative `help.yaml` loader +
# Jaro-Winkler "did you mean?" suggester. Only the `cli-help` feature is
# enabled; tga is otherwise independent of trusty-common.
trusty-common = { workspace = true, features = ["cli-help", "update-check"] }
# Async runtime
tokio = { workspace = true }
# CLI
clap = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# Database
# Bumped from 0.31 to align with trusty-memory-core / trusty-cto-db
# (rusqlite 0.39, libsqlite3-sys 0.37). Cargo's `links = "sqlite3"`
# uniqueness rule forbids two copies of libsqlite3-sys in one build graph,
# so every crate using rusqlite in this workspace must agree on a single
# major version.
#
# Local pin retained: the workspace `rusqlite` entry enables only the
# `bundled` feature; tga additionally needs the `chrono` feature for typed
# `DateTime<Utc>` row binding. Adding a feature alongside `workspace = true`
# is the documented way to extend a shared dep without cloning the version.
rusqlite = { workspace = true, features = ["chrono"] }
# Git
# Local pin retained: the workspace `git2` entry turns on default ssh+https
# features and `vendored-openssl`; tga explicitly disables defaults to drop
# the libssh2 system dependency. The `https` and `vendored-openssl` features
# are added here (#337) so `tga collect` can fetch from https:// remotes
# without an external system git:
#   - macOS: uses the native Security framework (no openssl runtime dep)
#   - Linux: vendors openssl statically (portable binaries, no system libssl)
#   - Windows: uses Schannel (no openssl runtime dep)
# SSH transport remains disabled (out of scope for this fix).
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "https", "vendored-openssl"] }
# HTTP client — workspace entry already declares
# `default-features = false, features = ["json", "stream", "rustls-tls"]`
# which is a superset of what tga needs. The `stream` extra is harmless
# (compiled but unused), so the migration is safe.
reqwest = { workspace = true }
# Parallelism
rayon = "1"
# Date/time
chrono = { workspace = true }
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# Regex / pattern matching
regex = { workspace = true }
aho-corasick = "1"
# String similarity (identity fuzzy matching)
strsim = { workspace = true }
# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Progress bars
indicatif = "0.17"
# UUID
uuid = { workspace = true }
# Hashing (config hash)
blake3 = "1"
# CSV generation
csv = "1"
# Template engine (for markdown reports)
tera = "1"
# Async trait
async-trait = { workspace = true }
# Async stream combinators (for bounded-concurrency LLM fallback)
futures = { workspace = true }

# Optional: AWS Bedrock runtime client for the Bedrock LLM provider.
aws-config = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }

[features]
default = []
# Enable the AWS Bedrock LLM classifier provider. Without this feature,
# `--provider bedrock` returns a configuration error explaining the build.
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime"]

[dev-dependencies]
# HTTP mocking for async reqwest tests
wiremock = "0.6"
# Statistical benchmarking
criterion = { workspace = true }
# Capture tracing events in tests (used by ticket_regex warn-log assertions)
tracing-test = "0.2"
# Temporary files for rule-loader tests
tempfile = { workspace = true }

[[bench]]
name = "tga_bench"
harness = false
