[package]
name = "trusty-gworkspace"
version = "0.1.0"
edition = "2024"
description = "Google Workspace MCP server for the Trusty suite"
license = "Elastic-2.0"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "gworkspace-mcp"
path = "src/bin/gworkspace-mcp.rs"

[dependencies]
trusty-mcp-core = { path = "../trusty-mcp-core", version = "0.1.2" }
trusty-common = { path = "../trusty-common", version = "0.3.3" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
