[package]
name = "trusty-mcp-core"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared JSON-RPC 2.0 / MCP types and stdio runner for trusty-* projects"
readme = "README.md"
keywords = ["mcp", "jsonrpc", "mcp-protocol", "stdio"]
categories = ["network-programming"]
homepage = "https://github.com/bobmatnyc/trusty-tools"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
