[package]
name = "trusty-memory-core"
version = "0.2.3"
edition = "2021"
description = "Backward-compat shim — use trusty_common::memory_core directly"
license = "MIT"
publish = false

[lib]
# Why: Explicit `rlib` matches the rest of the trusty-* ecosystem and
#      keeps the shim linkable from binaries that still reference this
#      crate by name.
crate-type = ["rlib"]

[dependencies]
# The entire surface re-exports from trusty-common's memory-core feature.
# No other deps are required — every type, trait, and function lives in
# trusty_common::memory_core::*.
trusty-common = { workspace = true, features = ["memory-core"] }

[features]
default = []
# Forward to trusty-common's `memory-core-kuzu` feature so existing call sites
# that enable `trusty-memory-core/kuzu` continue to work.
kuzu = ["trusty-common/memory-core-kuzu"]
