[package]
name = "trusty-memory"
version = "0.3.0"
edition = "2021"
description = "MCP server (stdio + HTTP/SSE) for trusty-memory"
license = "MIT"
readme = "README.md"

exclude = [".fastembed_cache/"]

[lib]
# Why: Explicit `rlib` keeps the crate linkable as a Rust library from
#      host processes (open-mpm) that want to register `MemoryMcpService`
#      directly via the shared `ServiceDescriptor` trait, rather than
#      spawning a separate MCP stdio child. Matches the rest of the
#      trusty-* ecosystem (see trusty-mcp-core) for consistency.
crate-type = ["rlib"]

[[bin]]
# Why: Ship a CLI binary so users can install via `cargo install trusty-memory`
#      and invoke `trusty-memory serve` (MCP stdio) or `trusty-memory migrate
#      kuzu-memory` to rewrite Claude settings files that reference the
#      legacy kuzu-memory MCP server.
# What: Thin clap-to-handler shim; all logic lives in the library + the
#      `commands` module.
# Test: `cargo run -p trusty-memory -- --help` lists `serve` and `migrate`.
name = "trusty-memory"
path = "src/main.rs"

[dependencies]
trusty-common = { path = "../trusty-common", version = "0.4.20", features = ["axum-server", "mcp", "memory-core", "monitor-tui"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
# Why: `commands::stop` walks the process table to find the running daemon by
#      name + argv. `sysinfo` is the portable way to do that across macOS and
#      Linux; the same crate is already a workspace dependency used by
#      trusty-search and trusty-mpm-daemon, so this is zero new lockfile churn.
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
# Used by `tests/mcp_stdio_tools.rs` to simulate a peer-process redb
# lock (issue #59) by holding `Database::create` against a palace's
# `kg.redb` / `index.usearch.redb` files while a fresh `AppState`
# falls back to the snapshot path.
redb = { workspace = true }
