[package]
name = "trusty-memory"
version = "0.6.0"
edition = "2021"
description = "MCP server (stdio + HTTP/SSE) for trusty-memory"
license = "MIT"
readme = "README.md"

exclude = [".fastembed_cache/", "ui/node_modules/**"]

[lib]
# Why: Explicit `rlib` keeps the crate linkable as a Rust library from
#      host processes (open-mpm) that want to register `MemoryMcpService`
#      directly via the shared `ServiceDescriptor` trait, rather than
#      spawning a separate MCP stdio child. Matches the rest of the
#      trusty-* ecosystem (see trusty-mcp-core) for consistency.
crate-type = ["rlib"]

[[bin]]
# Why: Ship a CLI binary so users can install via `cargo install trusty-memory`
#      and invoke `trusty-memory serve` (MCP stdio) or `trusty-memory migrate
#      kuzu-memory` to rewrite Claude settings files that reference the
#      legacy kuzu-memory MCP server.
# What: Thin clap-to-handler shim; all logic lives in the library + the
#      `commands` module.
# Test: `cargo run -p trusty-memory -- --help` lists `serve` and `migrate`.
name = "trusty-memory"
path = "src/main.rs"
# Why: `serve` / `start` boot the axum HTTP/SSE daemon, so the binary needs
#      the `axum-server` feature compiled in. Listing it here keeps
#      `--no-default-features` library builds (e.g. open-mpm in-process linker
#      that only wants `MemoryMcpService`) from accidentally trying to build
#      this binary without axum and failing to link `run_http_*`.
required-features = ["axum-server"]

[[bin]]
# Why: Multi-transport refactor — Claude Code launches MCP servers as
#      stdio child processes, but the trusty-memory daemon owns the redb
#      locks and must not be re-spawned per session. The bridge is a
#      ~40-line byte pipe between Claude Code's stdio and the daemon's
#      Unix domain socket. The bridge MUST NEVER open redb — it has no
#      database knowledge whatsoever, only `tokio::io::copy_bidirectional`
#      between stdin/stdout and the socket.
# What: standalone binary; depends on the library for the socket path
#      resolution helper and nothing else.
# Test: `bridge_byte_pipe_smoke` in tests/uds_roundtrip.rs.
name = "trusty-memory-mcp-bridge"
path = "src/bin/mcp_bridge.rs"

[[bin]]
# Why: Bundle the trusty-bm25-daemon binary into the trusty-memory install
#      surface so `cargo install trusty-memory` produces all three binaries
#      in one command. Users who set TRUSTY_BM25_DAEMON=1 without separately
#      installing the daemon get silently degraded lexical recall; bundling
#      closes that footgun. Mirrors PR #190 (trusty-embedderd in trusty-search).
# What: thin shim — all daemon logic lives in the trusty-bm25-daemon library
#      crate. This file just wires the tokio runtime and delegates to
#      `trusty_bm25_daemon::run()`.
# Test: `cargo install --path crates/trusty-memory --root /tmp/test` should
#      produce trusty-memory, trusty-memory-mcp-bridge, AND trusty-bm25-daemon.
name = "trusty-bm25-daemon"
path = "src/bin/bm25_daemon.rs"

[dependencies]
# Why: `axum-server` is gated on this crate's own `axum-server` feature so
#      downstream library consumers (e.g. `open-mpm` linking
#      `trusty_memory::MemoryMcpService`) can drop the axum/tower-http
#      surface entirely by setting `default-features = false`. The default
#      build for the binary path keeps `axum-server` on (see [features]
#      below), so existing `cargo install` / `cargo build` flows are
#      unaffected.
trusty-common = { path = "../trusty-common", version = "0.6.1", default-features = false, features = ["mcp", "memory-core", "monitor-tui", "bm25-client", "cli-help"] }
# Why: declaring trusty-bm25-daemon as a Cargo dependency causes `cargo install
#      trusty-memory` to also build and install the daemon binary alongside
#      trusty-memory — one install command, three binaries. The shim at
#      src/bin/bm25_daemon.rs calls `trusty_bm25_daemon::run()` so all daemon
#      logic stays in the trusty-bm25-daemon library crate.
trusty-bm25-daemon = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Why (issue #226): axum + tower-http are HTTP-server only. Gating them behind
#      the `axum-server` feature mirrors the rule already enforced in
#      `trusty-common` and lets `open-mpm` (which only links
#      `MemoryMcpService` for in-process `rpc.discover` merging) build a
#      slimmer dependency tree by setting `default-features = false`.
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
# Why: `commands::stop` walks the process table to find the running daemon by
#      name + argv. `sysinfo` is the portable way to do that across macOS and
#      Linux; the same crate is already a workspace dependency used by
#      trusty-search and trusty-mpm-daemon, so this is zero new lockfile churn.
sysinfo = { workspace = true }
# Issue #96: persistent activity log lives in a dedicated redb file under the
# daemon data dir so the dashboard activity feed survives restarts. redb was
# already a transitive dev-dependency for the MCP stdio peer-lock test; this
# moves it to a runtime dependency.
redb = { workspace = true }
# Issue #105: optional SHA-256 hashing of `trigger_prompt` field in enriched
# prompt logs when `TRUSTY_MEMORY_PROMPT_LOG_HASH_PROMPTS=1`. `sha2` already
# lives in the workspace dependency table (used by trusty-common,
# trusty-analyze, trusty-mpm-core, trusty-gworkspace) so this adds no new
# lockfile churn.
sha2 = { workspace = true }
# Issue #193: the bm25 spawn supervisor sends a graceful SIGTERM to its
# children before falling back to SIGKILL. tokio::process::Child does not
# expose SIGTERM directly, so we reach into the raw PID with libc::kill.
# libc is already a workspace dep used across the trusty-* crates; this is
# zero lockfile churn (Unix-only — the spawn supervisor is also Unix-only
# because the daemon protocol is UDS).
libc = { workspace = true }
# Issue #220: rolling dedup window uses Jaro-Winkler similarity to detect
# near-duplicate memory writes within a short time window. `strsim` is
# already a workspace dep (used by the cli-help suggest feature in
# trusty-common), so this adds zero lockfile churn.
strsim = { workspace = true }
# Issue #278: encode/decode triple IDs as URL-safe base64 for the
# `DELETE /kg/triples/<id>` endpoint. Already in the workspace dependency table.
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }

[features]
# Why (issue #226): library consumers that only need `MemoryMcpService` for
#      in-process MCP discovery (e.g. `open-mpm`) should not be forced to
#      compile the axum + tower-http HTTP/SSE surface. Mirrors the
#      `trusty-common` pattern where `axum-server` gates the same crates.
# Defaults to `axum-server` so the `trusty-memory` / `trusty-memory-mcp-bridge`
# / `trusty-bm25-daemon` binaries — and the standard `cargo install
# trusty-memory` / `cargo test -p trusty-memory` flows — keep building exactly
# as before. Consumers that want the slim library surface override with
# `default-features = false`.
default = ["axum-server"]
# Enables the axum HTTP/SSE daemon surface (`web`, `chat`, `run_http_*`,
# `sse_handler`, `bind_dynamic_port`, etc.). Pulls in `axum`, `tower-http`,
# and the matching `trusty-common/axum-server` feature flag.
axum-server = ["dep:axum", "dep:tower-http", "trusty-common/axum-server"]
