[package]
name = "trusty-monitor-tui"
version = "0.1.0"
edition = "2021"
description = "Unified ratatui dashboard for trusty-search and trusty-memory"
license = "Elastic-2.0"
repository = "https://github.com/bobmatnyc/trusty-tools"
publish = false

[lib]
name = "trusty_monitor_tui"
path = "src/lib.rs"

[[bin]]
name = "trusty-monitor"
path = "src/main.rs"

[dependencies]
trusty-common = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
